# blybot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  deploy-instance.sh  pyproject.toml  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: OPERATIONS.md  SPECIFICATION.md
src/blybot/: __init__.py  __main__.py  config.py  observability.py
src/blybot/adapters/: __init__.py  system.py
src/blybot/adapters/github/: __init__.py  gateway.py  issues.py
src/blybot/adapters/mediawiki/: __init__.py  publisher.py
src/blybot/adapters/telegram/: __init__.py  _common.py  admin.py  app.py  handlers.py  token_entry.py
src/blybot/adapters/toolsdb/: __init__.py  store.py
src/blybot/domain/: __init__.py  models.py  ports.py  pseudonym.py  rendering.py  sanitizer.py
src/blybot/services/: __init__.py  binding.py  directory.py  dm_routing.py  feedback.py  notify.py  policy.py  publish.py  repo.py  rules.py  sessions.py  transcribe.py
tests/: fakes.py  test_admin_handlers.py  test_app.py  test_architecture.py  test_binding.py  test_config.py  test_directory.py  test_dm_routing.py  test_feedback.py  test_group_handlers.py  test_main.py  test_mediawiki_publisher.py  test_models.py  test_notify.py  test_observability.py  test_policy.py  test_private_handlers.py  test_pseudonym.py  test_publish_service.py  test_rendering.py  test_repo_gateway.py  test_rules.py  test_rules_model.py  test_sanitizer.py  test_sessions.py  test_system_clock.py  test_toolsdb_store.py  test_transcribe.py  tg.py
